# clif

./: .gitignore  README.md  autobuild.bat  autobuild.sh
.test/: CMakeLists.txt  fstrtestfixtures.h  fstrtests.cpp  maintest.cpp
doc/readme_en/: README.md
src/: CMakeLists.txt
src/CLIF/: CLIF.cpp  CLIF.hpp  CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/example/funcs/: funcs.hpp
